Compiler Bouw/compiler/test/basic/stephen/fail/bad_float.cvc
#include "civic.h"

export int main() {
    float a = 5.654.4667;
    return 0;
}
